<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/city" />
    <ImageView    
        android:id="@+id/imview"  
        android:layout_width="wrap_content"    
        android:layout_height="wrap_content"    
        android:layout_gravity="center" /> 
    <TextView
        android:id="@+id/weather"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather" />
    <TextView
        android:id="@+id/temp"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/temp" />
    <TextView
        android:id="@+id/wind"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind" />
	<Button android:id="@+id/share"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/share"/>
	<Button android:id="@+id/record"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/record"/>
	<Button android:id="@+id/check"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/check"/>
	<Button android:id="@+id/settings"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/settings"/>

</LinearLayout>
